# pdfmder

./: .env.example  .env.template  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
data/: _extracted.md  _generated.md  test.md
output/: test-3.md  test-4.md  test-5.md  test-6.md
scripts/: generate_test_pdf.py
src/pdfmder/: __init__.py  cli.py  converter.py  llm_markdown.py  pdfium_extract.py  pdfium_images.py
tests/: test_cli_pdf_handling.py  test_main.py  test_pdf_assets.py  test_pdf_images.py
